--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
-	<h1>哈哈哈</h1>
+	<h1>哈(这是hualong分支添加)哈哈</h1>
 	<p>我是第二次新加的</p>
 	<p>我是第二次新加的</p>
 
@@ -20,6 +20,7 @@
 	<div>
 		我是华龙hualong分支上传的内容
 		<input type="text">
+		要搞点冲突
 	</div>
 	<br>
 </body>
